# json_parser_generator

./: LICENSE  README.md  pyproject.toml
src/json_parsgen/: json_parsgen.py
